# ZFuzz

./: Cargo.toml  Makefile  README.md
grammars/: sentence.json
include/elfparser/src/: lib.rs
include/fzero_fuzzer/: README.md
include/fzero_fuzzer/src/: main.rs
notes/: resources.md
notes/benchmarks/: README.md
notes/benchmarks/benchmark_empty/: README.md  afl-unicorn_harness.md  libfuzzer_harness.md  zfuzz_harness.md
notes/benchmarks/benchmark_simple_bug/: README.md  libfuzzer_harness.md  zfuss_harness.md
notes/benchmarks/benchmark_zip_parser/: README.md  zfuzz_harness.md
notes/qemu/: code_overview.md  components.md  interesting.md
notes/unicorn/: code_overview.md  codegen_asm.md  codegen_ir.md  components.md
notes/unicorn_ir_traces/: optimized_trace.txt  unoptimized_trace.txt
src/: arg_setup.rs  configurables.rs  default_grammar.rs  execution_state.rs  hooks.rs  lib.rs  main.rs  mutator.rs  pretty_printing.rs  syscalls.rs
src/targets/: target_1.rs  target_2.rs  targets.rs
test_cases/: .gdb_history  python_test.py  simple_test.c  simple_test_riscv64  simple_test_x86
tools/: snapshot.py
