[package]
name = "zfuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elfparser = { path = "./include/elfparser" }
unicorn-engine = { path = "./include/unicorn" }
rustc-hash = "1.1.0"
byteorder = "1.4.3"
clap = { version = "3.1.18", features = ["derive"] }
parse_int = "0.6.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
parking_lot = "*"
rand_xoshiro = "*"
fasthash = "*"
num-format = "*"
rand = "*"
console = "0.15.0"
